# 2025-p1-MaxwellSchroder

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
