[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxwell Schroder",email = "78782542+MaxwellSchroder@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
